# HRM

./: .modalignore  HRM_V2_REVIEW_REPORT.md  MODAL_QUICKSTART.md  README.md  modal_app.py  modal_run.py  requirements.txt
HRM-v2/: .gitignore  BUGFIX_APPLIED.md  CHANGELOG.md  COMPLETE_PORT_SUMMARY.md  DIRECTORY_STRUCTURE.txt  HRM_ACT_V1_GUIDE.md  INSTALLATION_CHECKLIST.md  LICENSE  PORTING_GUIDE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REVIEW_SUMMARY.md  SESSION_SUMMARY.md  TRAINING_RESULTS.md  TRAINING_STATUS.md  monitor_training.sh  pyproject.toml  train_maze_optimized.py  train_sudoku.py
HRM-v2/configs/: hrm_act_v1_example.yaml  minimal_config.yaml
HRM-v2/scripts/: setup_uv.sh  smoke_train.sh  verify_gpu.py
HRM-v2/src/hrm/: __init__.py
HRM-v2/src/hrm/models/: __init__.py  blocks.py  hrm_act_v1.py  layers.py  sparse_embedding.py
HRM-v2/src/hrm/ops/: __init__.py  attention.py  norm.py  rotary.py
HRM-v2/src/hrm/utils/: __init__.py  env.py  init.py
HRM-v2/tests/: __init__.py  test_attention.py  test_hrm_act_v1.py  test_models.py
configs/: rl_training.yaml
envs/: __init__.py  dynamic_pathfinding_env.py  obstacles.py
envs/maps/: __init__.py  (+1 more)
evaluation/: __init__.py  metrics.py  visualizer.py
hrm-cloud/: BENCHMARK_RESULTS.md  README.md  diffusion_cloud.py  hrm_cloud.py  hrm_cloudBoosted.py  hrm_cloudFullScale.py  hrm_cloudFullScaleRobustFix.py  hrm_cloudFullScaleSplit.py  hrm_cloudMid.py  hrm_cloud_8gpu.py  hrm_cloud_8gpu_v2.py  hrm_cloudv2.py  hrm_cloudv3.py
training/: __init__.py  sb3_wrapper.py  train_multi_gpu.py  train_predictor.py
(+8 files in other folders)
